# PST-dev

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  KNOWN_UNVERIFIED.md  MILESTONES.md  README.md  c_cpp_properties.json  crc.cpp  crc.hpp  encoding.hpp  launch.json  tasks.json  types.hpp
Claude/: HANDOFF.md  SPEC_GROUND_TRUTH.md  SPEC_VERIFIED.md
include/pstwriter/: block.hpp  contact.hpp  crc.hpp  encoding.hpp  event.hpp  graph_contact.hpp  graph_convert.hpp  graph_event.hpp  graph_message.hpp  ltp.hpp  m5_allocator.hpp  mail.hpp  messaging.hpp  nbt.hpp  ndb.hpp  page.hpp  types.hpp  writer.hpp
src/: block.cpp  contact.cpp  crc.cpp  encoding.cpp  event.cpp  graph_contact.cpp  graph_convert.cpp  graph_event.cpp  graph_message.cpp  internal_json.hpp  ltp.cpp  m5_allocator.cpp  mail.cpp  messaging.cpp  nbt.cpp  ndb.cpp  page.cpp  pst_baseline.cpp  pst_baseline.hpp  writer.cpp
test_samples/: README.md  sample_calendar.json  sample_contacts.json  sample_mail.json  sample_mail_simple.json  test_writer.cmd  test_writer.ps1
tests/: CMakeLists.txt  test_block.cpp  test_crc.cpp  test_encoding.cpp  test_ltp.cpp  test_m5_allocator.cpp  test_m5_btpage.cpp  test_m5_end_to_end.cpp  test_m5_nbt_reader.cpp  test_m7_end_to_end.cpp  test_m7_graph_convert.cpp  test_m7_graph_message.cpp  test_m7_mail.cpp  test_m7_placeholders.cpp  test_m8_contact.cpp  test_m9_event.cpp  test_messaging.cpp  test_ndb.cpp  test_types.cpp
tests/golden/: spec_sample_bt_intermediate.hex  spec_sample_bth.hex  spec_sample_data_tree.hex  spec_sample_hn.hex  spec_sample_nbt_leaf.hex  spec_sample_slblock.hex  spec_sample_tc.hex
tools/: CMakeLists.txt  pst_convert.cpp  pst_info.cpp  pst_info_run.hpp
tools/golden_gen/: hex_to_bin.py
